{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 119,
  "lineage": "c2688a8f-0478-8bd7-6a48-951e9959d8e3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jumphost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01aad667f16a905c7",
            "arn": "arn:aws:ec2:us-east-1:233812220516:instance/i-07a3915f4a71b213f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "lunar-calendar-jumphost-profile",
            "id": "i-07a3915f4a71b213f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fe8a9c783e532133",
            "private_dns": "ip-10-0-1-231.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.231",
            "public_dns": "ec2-100-27-8-81.compute-1.amazonaws.com",
            "public_ip": "100.27.8.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01579a827ef28f17d",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0291345d82f7c30fa",
            "tags": {
              "Name": "lunar-calendar-jumphost",
              "Project": "lunar-calendar"
            },
            "tags_all": {
              "Name": "lunar-calendar-jumphost",
              "Project": "lunar-calendar"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d6e95d42dd496662"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_cloudfront_distribution.website",
            "aws_cloudfront_origin_access_control.website",
            "aws_iam_instance_profile.jumphost",
            "aws_iam_role.jumphost",
            "aws_s3_bucket.website",
            "aws_security_group.jumphost",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233812220516:internet-gateway/igw-08d76cef2bbba93b2",
            "id": "igw-08d76cef2bbba93b2",
            "owner_id": "233812220516",
            "tags": {
              "Name": "lunar-calendar-igw",
              "Project": "lunar-calendar"
            },
            "tags_all": {
              "Name": "lunar-calendar-igw",
              "Project": "lunar-calendar"
            },
            "vpc_id": "vpc-0482e45cbb93811f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233812220516:route-table/rtb-00f1cca151cecd427",
            "id": "rtb-00f1cca151cecd427",
            "owner_id": "233812220516",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08d76cef2bbba93b2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lunar-calendar-public-rt",
              "Project": "lunar-calendar"
            },
            "tags_all": {
              "Name": "lunar-calendar-public-rt",
              "Project": "lunar-calendar"
            },
            "timeouts": null,
            "vpc_id": "vpc-0482e45cbb93811f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba16bc1eaccf6e0d",
            "route_table_id": "rtb-00f1cca151cecd427",
            "subnet_id": "subnet-0291345d82f7c30fa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jumphost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233812220516:security-group/sg-0d6e95d42dd496662",
            "description": "Security group for jumphost EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6e95d42dd496662",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lunar-calendar-jumphost-sg",
            "name_prefix": "",
            "owner_id": "233812220516",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lunar-calendar-jumphost-sg",
              "Project": "lunar-calendar"
            },
            "tags_all": {
              "Name": "lunar-calendar-jumphost-sg",
              "Project": "lunar-calendar"
            },
            "timeouts": null,
            "vpc_id": "vpc-0482e45cbb93811f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233812220516:subnet/subnet-0291345d82f7c30fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0291345d82f7c30fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "233812220516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lunar-calendar-public-subnet",
              "Project": "lunar-calendar"
            },
            "tags_all": {
              "Name": "lunar-calendar-public-subnet",
              "Project": "lunar-calendar"
            },
            "vpc_id": "vpc-0482e45cbb93811f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233812220516:vpc/vpc-0482e45cbb93811f2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-086c163cd2999380a",
            "default_route_table_id": "rtb-0fd72b2efd28fe2b9",
            "default_security_group_id": "sg-0e3baf83abea37604",
            "dhcp_options_id": "dopt-006ba0e931a575e3b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0482e45cbb93811f2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fd72b2efd28fe2b9",
            "owner_id": "233812220516",
            "tags": {
              "Name": "lunar-calendar-vpc",
              "Project": "lunar-calendar"
            },
            "tags_all": {
              "Name": "lunar-calendar-vpc",
              "Project": "lunar-calendar"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}